--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -125,7 +125,7 @@ menu:
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
-  blog: https:///blog.yeehomfoo.com/posts || heartbeat
+  blog: https:///blog.yeehomfoo.com || heartbeat
 
 # Enable/Disable menu icons / item badges.
 menu_settings:
