fix: wrong word in title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Wild of Knowledge
+title: Wilderness of Knowledge
 subtitle:
 description: Welcome to my personal website
 keywords:
