--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -569,7 +569,7 @@ needmoreshare2:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-125814510-1
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster/
